--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
             </div>
         </div>
 
+        <div class="slider-container">
+            <input type="range" min="1" max="20" value="2" class="slider" id="distanceSlider">
+            <div class="slider-labels">
+                <span id="distanceValue">2</span> miles
+            </div>
+        </div>
+
         <div id="loading" style="display:none;">Loading...</div>
         <div id="results"></div>
         <button id="loadMore" class="styled-button" style="display:none;">More</button>
