Add distance slider to set max distance for search and update code to handle it

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </div>
 
         <div class="slider-container">
-            <input type="range" min="1" max="20" value="2" class="slider" id="distanceSlider">
+            <input type="range" min="1" max="10" value="2" class="slider" id="distanceSlider">
             <div class="slider-labels">
-                <span id="distanceValue">2</span> miles
+                <span id="distanceValue">2 Miles</span>
             </div>
         </div>
 
