Add total results count, automatic updates for filters, and distance adjustments

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div>
 
         <div id="loading" style="display:none;">Loading...</div>
+        <div id="results-count"></div>
         <div id="results"></div>
         <button id="loadMore" class="styled-button" style="display:none;">More</button>
     </div>
