Set default slider distance to 1 mile and update code accordingly

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </div>
 
         <div class="slider-container">
-            <input type="range" min="1" max="10" value="2" class="slider" id="distanceSlider">
+            <input type="range" min="1" max="10" value="1" class="slider" id="distanceSlider">
             <div class="slider-labels">
-                <span id="distanceValue">2 Miles</span>
+                <span id="distanceValue">1 Mile</span>
             </div>
         </div>
 
