--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </div>
 
         <div id="loading" style="display:none;">Loading...</div>
-        <div id="results-count"></div>
         <div id="results"></div>
         <button id="loadMore" class="styled-button" style="display:none;">More</button>
+        <div id="results-count" class="results-count"></div>
     </div>
 </body>
 </html>
