Update functionality for distance slider and 'More' button to maintain current results and load more

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
 
         <div id="loading" style="display:none;">Loading...</div>
         <div id="results"></div>
-        <button id="loadMore" class="styled-button" style="display:none;">More</button>
-        <div id="results-count" class="results-count"></div>
+        <div class="results-footer">
+            <button id="loadMore" class="styled-button" style="display:none;">More</button>
+            <div id="results-count"></div>
+        </div>
     </div>
 </body>
 </html>
