Fix 'More' button and results count functionality, ensure proper loading and filtering of results

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div id="loading" style="display:none;">Loading...</div>
         <div id="results"></div>
-        <div class="results-footer">
+        <div class="results-footer" style="display:none;">
             <button id="loadMore" class="styled-button" style="display:none;">More</button>
             <div id="results-count"></div>
         </div>
